--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3"
 services:
   mysql:
     container_name: ddd_forum_mysql
-    image: mysql:latest
+    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:5.7
     ports:
       - 3306:3306
     environment:
